--- a/readme
+++ b/readme
@@ -1,2 +1,10 @@
 This is the complete code for the uncovery.me server
 Please feel free to contribute
+
+To understand the code, please start reading the code in either 
+
+index_wp.php (when the code is started from Wordpress)
+
+or 
+
+index_ws.php (when the code is started from Websend/Minecraft)
