--- a/readme
+++ b/readme
@@ -8,3 +8,5 @@ index_wp.php (when the code is started from Wordpress)
 or 
 
 index_ws.php (when the code is started from Websend/Minecraft)
+
+[the end]
